fixed errors in wk3 PS

--- a/regmods/regmods_exercises_wk3.Rmd
+++ b/regmods/regmods_exercises_wk3.Rmd
@@ -226,11 +226,11 @@ summary(fit)$sigma^2
 ```{r}
 
 
-plot(dffits(fit))
+#plot(dffits(fit))
 
-plot(dfbetas(fit))
-plot(influence(fit))
-hatvalues(fit)
+#plot(dfbetas(fit))
+#plot(influence(fit))
+#hatvalues(fit)
 ```
 
 
