--- a/regmods/adjustment_notes.Rmd
+++ b/regmods/adjustment_notes.Rmd
@@ -2,7 +2,7 @@
 title: "Adjustments"
 author: "Shawn Rich"
 date: "January 21, 2016"
-output: pdf_document
+output: html_document
 ---
 
 This is the code from the *Adjustments* lecture notes for study and reference purposes.
