--- a/regmods/quiz4-1.Rmd
+++ b/regmods/quiz4-1.Rmd
@@ -33,24 +33,18 @@ exp(coef(fit))
 2. 
 
 ```{r}
-data(shuttle)
-head(shuttle)
-
-df_shuttle <- as.data.frame(shuttle)
-#nrow(df_shuttle)
-#head(df_shuttle)
-df_shuttle <- mutate(df_shuttle,
-                     auto = 1 * (use == "auto"))
-fit <- glm(auto ~ wind + magn, family = "binomial", data = df_shuttle)
-round(summary(fit)$coef,4)
-round(exp(summary(fit)$coef),4)
+data("shuttle")
+shuttle$auto <- 1 * (shuttle$use == "auto")
+shuttle$headwind <- 1 * (shuttle$wind == "head")
+fit <- glm(auto ~ headwind + magn, data = shuttle, family = binomial)
+exp(coef(fit))
 ```
 
 3.
 
 ```{r}
 data(shuttle)
-
+# this got the correct answer
 df_shuttle <- as.data.frame(shuttle)
 df_shuttle <- mutate(df_shuttle,
                      auto = 1 * (use == "auto"))
@@ -59,6 +53,16 @@ fit2 <- glm(I(1 - auto) ~ wind, family = binomial, data = df_shuttle)
 summary(fit1)$coef
 summary(fit2)$coef
 
+# another way 
+data(shuttle)
+shuttle$auto <- 1 * (shuttle$use == "auto")
+shuttle$headwind <- 1 * (shuttle$wind == "head")
+fit1 <- glm(auto ~ headwind, data = shuttle, family = binomial)
+fit2 <- glm(I(1 -auto) ~ headwind, data = shuttle, family = binomial)
+
+exp(coef(fit1))
+exp(coef(fit2))
+
 ```
 
 
@@ -66,11 +70,10 @@ summary(fit2)$coef
 
 ```{r}
 data("InsectSprays")
-head(InsectSprays)
 
-fit <- glm(count ~ spray, family = "poisson", data = InsectSprays)
-
-summary(fit)$coef
+fit <- glm(count ~ spray, family = poisson, data = InsectSprays)
+exp(coef(fit))
+coef(fit)
 exp(summary(fit)$coef)
 ```
 
