--- a/regmods/regmods_project.Rmd
+++ b/regmods/regmods_project.Rmd
@@ -2,7 +2,7 @@
 title: "Relationship of Variables and Miles Per Gallon"
 author: "Shawn Rich"
 date: "January 26, 2016"
-output: pdf_document
+output: html_document
 ---
 
 ```{r warning=FALSE, echo=FALSE, error=FALSE, message=FALSE}
@@ -17,30 +17,41 @@ In this report I will use the mtcars dataset to examine the relationship among t
 
 ## Data Exploration
 
-Description of the variables in the mtcars dataset is in [table 1] of the Appendix.
+Before building models and analysis we need an understanding of the data. Appendix A list the variables in the dataset with their descriptions and the first rows of the dataset. We now know what the variables mean and what type of data they contain.
 
 ```{r}
 head(mtcars)
 ```
 
-## Appendix
+## Appendix A - MTCARS Dataset Description
 
-**Table 1:** MTCARS dataset
+The MTCARS variables and their descriptions.
 
-Variable   | Description
----------- | -------------  
-mpg        | Miles/(US) gallon  
-cyl        | Number of cylinders  
-disp       | Displacement (cu.in.)  
-hp         | Gross horsepower  
-drat       | Rear axle ratio  
-wt         | Weight (1000 lbs)  
-qsec       | 1/4 mile time  
-vs         | V/S  
-am         | Transmission (0 = automatic, 1 = manual)  
-gear       | Number of forward gears  
-carb       | Number of carburetors  
+~~~~~
+mpg         Miles/(US) gallon  
+cyl         Number of cylinders  
+disp        Displacement (cu.in.)  
+hp          Gross horsepower  
+drat        Rear axle ratio  
+wt          Weight (1000 lbs)  
+qsec        1/4 mile time  
+vs          Cylinder alignment (0 - V; 1 - straight)
+am          Transmission type (0 = automatic, 1 = manual)  
+gear        Number of forward gears  
+carb        Number of carburetors  
+~~~~~
+
+The first 10 rows of the dataset to get a overall view of the data.
+
+```{r echo=FALSE}
+head(mtcars)
+```
 
 
+## Appendic B - MPG vs Transmisstion Type Plot
 
-**Figure 1:** A Graph of Something
+```{r}
+boxplot(mpg ~ am, data=mtcars, xlab="Transmission Type",
+ylab="Miles per Gallon",
+main="Automatic versus Manual Transmission MPG")
+```
