--- a/regmods/regmods_project.Rmd
+++ b/regmods/regmods_project.Rmd
@@ -1,8 +1,7 @@
 ---
 title: "Analysis of Miles Per Gallon for Automatic vs Manual Transmissions"
-author: rich
 date: "January 31, 2016"
-output: html_document
+output: pdf_document
 ---
 
 ```{r warning=FALSE, echo=FALSE, error=FALSE, message=FALSE}
@@ -13,11 +12,11 @@ data("mtcars")
 
 ## Executive Summary
 
-This report, using the the mtcars data-set, examines the relationship among the variables in the data-set and miles per gallon (*mpg*) as outcome. Two main points addressed in this report are (1) whether an automatic or manual transmission results in better gas mileage and (2) what is difference in *mpg* between automatic and manual transmissions.
+This report, using the the mtcars data-set, examines the relationship among the variables in the data-set and miles per gallon (*mpg*) as outcome. Two main points addressed in this report are (1) whether an automatic or manual transmission results in better gas mileage and (2) what is the difference in *mpg* between automatic and manual transmissions.
 
 Part of the data exploration was to determine if there is a difference in mean *mpg* for automatic and manual transmissions. A t-test shows that a null hypothesis of means being equal should be rejected. Further analysis was then justified. 
 
-Analysis started by finding other variables that are highly correlated with *mpg*. These are *cyl*, *disp*, *hp*, and *wt*. Variables *cyl* and *disp* were also found to be highly correlated with each other. Five nested models were created starting with *mpg ~ am* and then adding others individually. ANOVA was used to compare this models. During this comparison it was found the neither *cyl* or *disp* were necessary. The final model was *mpg ~ am + hp + wt*. This models shows that on average there is a **2.084** mile per gallon increase for a manual transmission over an automatic. The $R^2$ value shows the model explains 84% of the variation. Residual plot did not show aspects of poor model fit.
+Analysis started by finding other variables that are highly correlated with *mpg*. These are *cyl*, *disp*, *hp*, and *wt*. Variables *cyl* and *disp* were also found to be highly correlated with each other. Five nested models were created starting with *mpg ~ am* and then adding others individually. ANOVA was used to compare these models. During this comparison it was found the neither *cyl* or *disp* were necessary. The final model was *mpg ~ am + hp + wt*. This models shows that on average there is a **2.084** miles per gallon increase for a manual transmission over an automatic. The $R^2$ value shows the model explains 84% of the variation. Residual plot did not show aspects of poor model fit.
 
 
 ## Data Exploration
@@ -70,10 +69,6 @@ t.test(mpg.auto, mpg.manual)
 
 First we look at the correlation among all variables against *mpg* to see which should be included in our model. From the correlation matrix we that *cyl*, *disp*, *hp*, and *wt* are highly correlated with mpg. There is also a high correlation of `r cor(mtcars$disp, mtcars$cyl)` between *disp* and *cyl*, which means we may not want to include both. 
 
-**Correlation of Variables**
-
-Variables *cyl*, *disp*, *hp*, and *wt* are highly correlated with **mpg**. The high correlation between *disp* and *cyl* indicates that those two should be examined and determine if both should be included. 
-
 ```{r}
 cor(mtcars)[1,]
 cor(mtcars$cyl,mtcars$disp)
@@ -113,4 +108,4 @@ plot(model3, which=2)
 summary(model3)
 ```
 
-This shows that on average the is a **2.084** mile per gallon increase for a manual transmission over an automatic. The $R^2$ value show the model explains **84%** of the variation. 
+The summary shows that on average there is a **2.084** mile per gallon increase for a manual transmission over an automatic. The $R^2$ value show the model explains **84%** of the variation. 
