--- a/machine_learning/project/ml_project.Rmd
+++ b/machine_learning/project/ml_project.Rmd
@@ -9,3 +9,48 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+```{r warning=FALSE, echo=FALSE, error=FALSE, message=FALSE}
+# initializations
+rm(list=ls())
+
+# set working directory
+setwd("~/Documents/courses/course_notes/machine_learning/project")
+
+# load libraries
+library(caret)
+
+```
+
+## Load Train and Test Data
+
+```{r warning=FALSE, echo=FALSE, error=FALSE, message=FALSE}
+trainingData <- read.table("./data/pml-training.csv", sep=",", na.strings = c("NA","#DIV/0!"),header = TRUE)
+testingData <- read.table("./data/pml-testing.csv", sep=",", na.strings = c("NA","#DIV/0!"),header = TRUE)
+```
+
+## Cleanup Data
+
+The first two columns "X" and "user_name" are removed as they are irrelevant as predictors. The data contain many NA values. These are set to zero. Next the caret function nearZeroVar to identify near zero-variance variables that we would want to eliminate as predictors in our model.
+
+```{r warning=FALSE, echo=TRUE, error=FALSE, message=FALSE}
+trainingData <- trainingData[,-c(1,2)]
+trainingData[is.na(trainingData)] <- 0
+
+dim(trainingData)
+nzv <- nearZeroVar(trainingData)
+trainingData <- trainingData[,-nzv]
+dim(trainingData)
+```
+nzv[nzv$zeroVar,]
+head(trainingData)
+summary(training$X)
+head(training$X)
+tail(training$X)
+colnames(trainingData)
+colnames(testingData)
+summary(trainingData$classe)
+summary(testingData$problem_id)
+head(testingData$problem_id)
+head(pml_training[which(pml_training$new_window=="yes"),])
+summary(trainingData$user_name)
+
